--- a/assets/css/youmax_blue_custom.css
+++ b/assets/css/youmax_blue_custom.css
@@ -1914,3 +1914,7 @@ background-color: rgba(0, 0, 0, 0.16);
 /* Added for New Page Mode*/
 
 .newpage #youmax-load-more-div {display: none;}
+
+#events_UCgGXkEJ5S_MmQCSoBnusr1Q {
+    display: none;
+}
